# csc-proj

./: CMakeLists.txt  Join_Shares  Join_Shares.c  Make_Shares  Make_Shares.c  README.md  Shamir.c  admin.sh  calculator  calculator.cpp  clear_all.sh  counter.sh  decrypt  decrypt.cpp  key_generator  key_generator.cpp  makefile.join  makefile.new  makefile.share  parameters.txt  sumcheck  sumcheck.cpp  tally.sh  voter.sh  weights_encryptor  weights_encryptor.cpp
